<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE5CE2D6"
    tools:context=".info_club_activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="0dp"
            android:src="@drawable/icon"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1.2"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1.2"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="2.7"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome6"/>

    </LinearLayout>



</RelativeLayout>